--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,11 @@
             <version>4.12</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.opencsv</groupId>
+            <artifactId>opencsv</artifactId>
+            <version>5.6</version>
+        </dependency>
 
     </dependencies>
     <properties>
